--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ header {
     left: 0;
     width: 100%;
     transition: all 0.5s;
-    z-index: 9;
+    z-index:11;
 }
 
 header .row {
@@ -435,9 +435,6 @@ header .row nav ul>i {
     overflow: hidden;
     /* padding-top: 17rem; */
     margin-bottom: 17rem;
-    /* background-color: rgba(0, 0, 0, 0.3); */
-    /* background-color: rgba(0, 0, 0, 0.3); */
-
 }
 
 
@@ -446,8 +443,15 @@ header .row nav ul>i {
     position: absolute;
     inset: 0;
     background-color: rgba(0, 0, 0, 0.3);
-    /* background-size:  54.2rem; */
-    /* z-index: 9; */
+    /* background-size: 100% 54.2rem; */
+    height: 54.2rem;
+    /* z-index: -1; */
+    
+}
+#why-select .main-title{
+    z-index: 9;
+    position: relative;
+
 }
 
 
@@ -471,7 +475,7 @@ header .row nav ul>i {
     /* width: 30rem;
     height: 43rem;  */
     background: #FFFFFF;
-    box-shadow: 0px 8px 60px 0 rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 8px 60px 0 rgba(0, 0, 0, 0.4);
     border-radius: 1rem;
     padding: 4.5rem 0 7rem 2rem;
     /* padding: 2rem 0 0 1.5rem; */
@@ -582,154 +586,162 @@ header .row nav ul>i {
 /**************************************/
 
 
-#test {
-    margin-top: 178.09px;
+.client-containor {
+    margin: 17rem 0 18rem 0;
+    margin-left: calc((100% - 1370px) / 2);
 }
 
-.test_data h3 {
-    font-family: 'Poppins';
-    font-style: normal;
+.client-containor .client-say p span {
     font-weight: 500;
-    font-size: 30px;
-    line-height: 70px;
+    font-size: 3rem;
+    line-height: 7rem;
     letter-spacing: 0.14em;
     color: #626262;
 }
 
-#test .client-container {
-    margin-left: calc((100% - 141rem) / 2);
-    padding: 0 20px;
-}
-
-.test_data h2 {
+.client-containor .client-say h2 {
     font-weight: 600;
-    margin-top: -10px;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 60px;
-    /* line-height: 70px; */
+    font-size: 6rem;
+    line-height: 7rem;
     color: #020202;
 }
 
-.test_data p {
+.client-containor .client-say p {
     font-weight: 500;
-    font-size: 18px;
-    line-height: 40px;
+    font-size: 1.8rem;
+    line-height: 4rem;
     color: #626262;
+    /* padding-bottom: 10rem; */
 }
 
-.test_btn .prev1,
-.test_btn .next2 {
-    z-index: 9;
+#our-client .our-client-slider .swiper-clt {
+    background: #FFFFFF;
+    box-shadow: 0px 20px 60px rgba(0, 0, 0, 0.1);
+    border-radius: 1rem;
+    /* width: 39.9rem; */
+    height: 43.2rem;
+    padding: 5rem 5.4rem 5.1rem 5.3rem;
+    margin: 0 3rem 0 3rem;
+}
+
+/* .our-client-slider .swiper-wrapper {
+    padding-top:
+    .our-client-arrow .next2 {
+        right: 12rem;
+        color: #737373;
+    } 
+    padding-bottom: 5rem;
+} */
+
+.our-client-slider .swiper-slide .client-img {}
+
+.our-client-slider .swiper-slide .client-img img {
+    width: 13rem;
+    height: 13rem;
+    /* margin: -12rem 0 0 8.3rem;
+    display: inline; */
     position: absolute;
-    top: -13.4rem;
+    top: -17%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
+
+.our-client-slider .swiper-slide .client-data {
+    text-align: center;
+}
+
+.our-client-slider .client-bio {
+    position: relative;
+}
+
+.our-client-slider .swiper-slide .client-data h4 {
+    font-weight: 600;
+    font-size: 2.4rem;
+    line-height: 3rem;
+    text-align: center;
+    color: #000000;
+    padding-top: 4.4rem;
+}
+
+.our-client-slider .swiper-slide .client-data p {
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 2.8rem;
+    color: #858585;
+}
+
+.our-client-slider .swiper-slide .client-data a {
+    padding-top: 5rem;
+    display: inline-block;
+    display: flex;
+    justify-content: flex-start;
+    color: #F4BC61;
+    padding-bottom: 1.8rem;
+}
+
+.our-client-slider .swiper-slide .client-data a i {
+    margin-right: 0.7rem;
+    font-size: 1.5rem;
+}
+
+.our-client-slider .swiper-slide .client-data>p {
+    font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 2.8rem;
+    color: #858585;
+    text-align: left;
+}
+
+.our-client-folder {
+    position: relative;
+    margin-top: 15rem;
+    display: block;
+}
+
+
+/* 
+.our-client-arrow .prev2,
+.our-client-arrow .next2 {
+    z-index: 8;
+    position: absolute;
+    top: -13rem;
     width: 7rem;
-    height: 7rem;
+    height: 6.6rem;
     box-shadow: 0px 8px 50px rgba(0, 0, 0, 0.1);
     background: #FFFFFF;
     border: 1px solid #E8E8E8;
     border-radius: 10px;
     font-size: 3rem;
-    /* text-align: center; */
-    align-items: center;
+    text-align: center;
     line-height: 6.5rem;
     cursor: pointer;
-    display: flex;
-    padding: 24.5px;
-
-
+} */
+.our-client-arrow .prev2,
+.our-client-arrow .next2 {
+    z-index: 8;
+    position: absolute;
+    top: -18rem;
+    width: 7rem;
+    height: 6.6rem;
+    box-shadow: 0px 8px 50px rgb(0 0 0 / 10%);
+    background: #FFFFFF;
+    border: 1px solid #E8E8E8;
+    border-radius: 10px;
+    font-size: 3rem;
+    text-align: center;
+    line-height: 6.5rem;
+    cursor: pointer;
 }
 
-#test .test_btn {
-    position: relative;
-    margin-top: 100px;
-    z-index: -1;
-}
-
-.test_btn .prev1 {
-
-    right: 15rem;
+.our-client-arrow .prev2 {
+    right: 28rem;
     color: #737373;
 }
 
-.test_btn .next1 {
-    left: 3rem;
+.our-client-arrow .next2 {
+    right: 16rem;
     color: #737373;
-}
-
-#test .test_slider .swiper-slide {
-    /*  height: 500px; */
-    background-color: #fff;
-    margin-left: 10px;
-    /* border: 1px solid black; */
-    padding-bottom: 20px;
-    margin: 0 20px;
-    border-radius: 10px;
-    /* margin-top: -100px; */
-
-
-}
-
-.test_profile {
-    margin-top: 0px;
-}
-
-#test .test_slider .swiper-slide {
-    /* padding-top: 7rem; */
-    padding-bottom: 5rem;
-}
-
- #test .test_slider .swiper-slide .test_profile .test-profile-pic {
-    display: flex;
-    justify-content: center;
-
-
-}
-
-#test .test_slider .swiper-slide .test_profile .test-profile-pic img {
-    /* margin-top: -100px; */
-    margin-bottom: -50px;
-}
-
-
-.profile_data {
-
-    border-radius: 10px;
-    height: 432px;
-    width: 399px;
-    padding: 53px;
-    box-shadow: 0px 20px 60px rgba(0, 0, 0, 0.1);
-
-}
-
-.profile_data h4 {
-    font-size: 18px;
-    font-weight: 500px;
-    line-height: 70px;
-    text-align: center;
-    margin-top: 50px;
-
-}
-
-.profile_data img {
-    margin-top: 50px;
-}
-
-.profile_data p {
-    text-align: center;
-    font-size: 17px;
-    color: #858585;
-    margin-top: -30px;
-
-}
-
-.profile_data h3 {
-    color: #858585;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 28px;
-    margin-top: 10px;
 }
 
 /********Subcribe section************/
@@ -857,6 +869,7 @@ header .row nav ul>i {
     padding: 0 1.5rem;
     color: #000;
     font-size: 1.8rem;
+    /* margin-right: 1rem; */
 }
 
 .contact-info ul li {
@@ -867,19 +880,28 @@ header .row nav ul>i {
     display: flex;
     color: #6C6C6C;
 }
+.contact-info ul li a:hover,
+.contact-info ul li a:hover i{
+    color: red;
+}
 
 .contact-info ul li a i {
-    color: #000;
+    color: #6C6C6C;
+    margin-right: 1rem;
+}
+.contact-info ul li a{
+    color: #6C6C6C;
 }
 
-.contact-info li:hover {
+
+/* /* .contact-info li:hover {
     color: red;
-}
+} */
 
 
-.contact-info ul li a i:hover {
+/* .contact-info ul li a i:hover {
     color: red;
-}
+}  */
 
 /* .contact-info ul li a:hover{
     color: red;
@@ -1028,7 +1050,7 @@ header .row nav ul>i {
 
 }
 
-*/
+
 
 /***1200-1365 (Big ipad)****/
 @media screen and (max-width:1365px) {
@@ -1047,7 +1069,7 @@ header .row nav ul>i {
     }
 
     #hero .hero-data {
-        top: 45%;
+        top: 24%;
     }
 
     header .row nav ul li a {
