--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ header {
     left: 0;
     width: 100%;
     transition: all 0.5s;
-    z-index:11;
+    z-index: 11;
 }
 
 header .row {
@@ -211,7 +211,7 @@ header .row nav ul>i {
 /**********Hero Section************/
 
 #hero {
-    background: url(../imges/pexels-leeloo-thefirst-5227440\ \(1\).jpg);
+    background: url(../imges/pexels-natanael-alves-bezerra-15483817.jpg);
     width: 100%;
     height: 100vh;
     background-position: center center;
@@ -228,7 +228,7 @@ header .row nav ul>i {
 
 #hero .hero-data {
     position: absolute;
-    top: 39%;
+    top: 31%;
 }
 
 .hero-data h1 {
@@ -256,7 +256,7 @@ header .row nav ul>i {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 0.9rem 0 2.5rem;
+    padding: 0 0.9rem 0 2.3rem;
 }
 
 .search-form select {
@@ -273,7 +273,7 @@ header .row nav ul>i {
     background-color: #000;
     color: var(--secondary-color);
     border-radius: 38rem;
-    padding: 1.5rem 1rem;
+    padding: 1.5rem 2rem;
     font-weight: bold;
     border: none;
     font-size: 1.8rem;
@@ -370,6 +370,8 @@ header .row nav ul>i {
     font-size: 1.4rem;
     line-height: 2.1rem;
     color: #555555;
+    margin-top: 1rem;
+
 }
 
 .explore-select-folder {
@@ -394,12 +396,12 @@ header .row nav ul>i {
 }
 
 .explore-arrow .prev {
-    left: 14px;
+    left: 1.5rem;
     color: #737373;
 }
 
 .explore-arrow .next {
-    right: 14px;
+    right: 1.5rem;
     color: #737373;
 }
 
@@ -422,12 +424,18 @@ header .row nav ul>i {
     box-shadow: none;
 }
 
+/* .explore-slider.img-slider{
+    margin: 2rem;
+} */
+
+
+
 /*************************************/
 
 /************Why Select Section**********/
 
 #why-select {
-    background: url(../imges/pexels-obo-teng-15478201.jpg);
+    background: url(../imges/pexels-χρηστοσ-μιχαλαινασ-15475385.jpg);
     background-size: 100% 54.2rem;
     /* background-position: center center; */
     background-repeat: no-repeat;
@@ -437,28 +445,14 @@ header .row nav ul>i {
     margin-bottom: 17rem;
 }
 
-
-#why-select::before {
-    content: '';
-    position: absolute;
-    inset: 0;
-    background-color: rgba(0, 0, 0, 0.3);
-    /* background-size: 100% 54.2rem; */
-    height: 54.2rem;
-    /* z-index: -1; */
-    
-}
-#why-select .main-title{
+#why-select .main-title {
     z-index: 9;
     position: relative;
-
 }
-
 
 #why-select .main-title h2 {
     color: var(--secondary-color);
     margin-top: 2.6rem;
-    /* z-index: 9; */
 }
 
 #why-select .main-title p {
@@ -468,22 +462,20 @@ header .row nav ul>i {
 
 .why-slider .swiper-wrapper {
     padding-bottom: 3rem;
-
+    /* 56x */
 }
 
 .why-slider .swiper-sd {
     /* width: 30rem;
-    height: 43rem;  */
+    height: 43rem; */
     background: #FFFFFF;
-    box-shadow: 0px 8px 60px 0 rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 8px 60px 0 rgba(0, 0, 0, 0.15);
     border-radius: 1rem;
     padding: 4.5rem 0 7rem 2rem;
-    /* padding: 2rem 0 0 1.5rem; */
     margin-top: 7.6rem;
-    margin-right: 5rem;
+    margin-right: 4rem;
     margin-bottom: 2rem;
-    margin-left: 5rem;
-    /* margin: 0 20rem; */
+    margin-left: 4rem;
 }
 
 .why-slider .why-img {
@@ -500,13 +492,6 @@ header .row nav ul>i {
 
 }
 
-.why-slider .why-text a {
-    margin-top: 3rem;
-    font-size: 1.6rem;
-    line-height: 7rem;
-    color: #000;
-}
-
 .why-slider .why-text h4 {
     font-weight: 600;
     font-size: 2.4rem;
@@ -518,7 +503,7 @@ header .row nav ul>i {
 .why-slider .why-text p {
     font-weight: 500;
     font-size: 1.8rem;
-    line-height: 2.7rem;
+    line-height: 2.2rem;
     color: #858585;
     margin-top: 1rem;
 }
@@ -527,6 +512,10 @@ header .row nav ul>i {
     margin-top: 3.8rem;
     text-decoration: none;
     font-weight: 500;
+    font-size: 1.8rem;
+    line-height: 2.7rem;
+    color: #000000;
+    display: inline-block;
 }
 
 .why-select-folder {
@@ -538,7 +527,7 @@ header .row nav ul>i {
 .why-select-arrow .next1 {
     z-index: 8;
     position: absolute;
-    top: -7rem;
+    top: -4.4rem;
     width: 7rem;
     height: 6.6rem;
     box-shadow: 0px 8px 50px rgba(0, 0, 0, 0.1);
@@ -552,14 +541,34 @@ header .row nav ul>i {
 }
 
 .why-select-arrow .prev1 {
-    left: -3.5rem;
+    left: -3rem;
     color: #737373;
 }
 
 .why-select-arrow .next1 {
-    right: -3.7rem;
+    right: -3rem;
     color: #737373;
 }
+
+#why-select::before {
+    /* z-index: 1; */
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    height: 54.2rem;
+}
+
+/* #why-select::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+   background-repeat: no-repeat;
+} */
+/* .swiper-android .swiper-slide, .swiper-wrapper {
+    transform: translate3d(0px,0,0);
+} */
 
 
 /******************************************/
@@ -585,7 +594,7 @@ header .row nav ul>i {
 
 /**************************************/
 
-
+/************our client section********/
 .client-containor {
     margin: 17rem 0 18rem 0;
     margin-left: calc((100% - 1370px) / 2);
@@ -616,7 +625,7 @@ header .row nav ul>i {
 
 #our-client .our-client-slider .swiper-clt {
     background: #FFFFFF;
-    box-shadow: 0px 20px 60px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 15px 40px rgb(0 0 0 / 10%);
     border-radius: 1rem;
     /* width: 39.9rem; */
     height: 43.2rem;
@@ -624,14 +633,10 @@ header .row nav ul>i {
     margin: 0 3rem 0 3rem;
 }
 
-/* .our-client-slider .swiper-wrapper {
-    padding-top:
-    .our-client-arrow .next2 {
-        right: 12rem;
-        color: #737373;
-    } 
+.our-client-slider .swiper-wrapper {
+    padding-top: 7rem;
     padding-bottom: 5rem;
-} */
+}
 
 .our-client-slider .swiper-slide .client-img {}
 
@@ -700,12 +705,12 @@ header .row nav ul>i {
 }
 
 
-/* 
+
 .our-client-arrow .prev2,
 .our-client-arrow .next2 {
     z-index: 8;
     position: absolute;
-    top: -13rem;
+    top: -13.4rem;
     width: 7rem;
     height: 6.6rem;
     box-shadow: 0px 8px 50px rgba(0, 0, 0, 0.1);
@@ -716,26 +721,10 @@ header .row nav ul>i {
     text-align: center;
     line-height: 6.5rem;
     cursor: pointer;
-} */
-.our-client-arrow .prev2,
-.our-client-arrow .next2 {
-    z-index: 8;
-    position: absolute;
-    top: -18rem;
-    width: 7rem;
-    height: 6.6rem;
-    box-shadow: 0px 8px 50px rgb(0 0 0 / 10%);
-    background: #FFFFFF;
-    border: 1px solid #E8E8E8;
-    border-radius: 10px;
-    font-size: 3rem;
-    text-align: center;
-    line-height: 6.5rem;
-    cursor: pointer;
 }
 
 .our-client-arrow .prev2 {
-    right: 28rem;
+    right: 25rem;
     color: #737373;
 }
 
@@ -744,9 +733,19 @@ header .row nav ul>i {
     color: #737373;
 }
 
+/* element.style {
+}
+.our-client-arrow .prev2, .our-client-arrow .next2 {
+    width: 5rem;
+    height: 4.6rem;
+    font-size: 1.8rem;
+    line-height: 4.5rem;
+    top: -10.4rem;
+} */
+
 /********Subcribe section************/
 #subcribe {
-    background: url(../imges/pexels-leeloo-thefirst-5227440\ \(1\).jpg);
+    background: url(../imges/pexels-natanael-alves-bezerra-15483817.jpg);
     padding: 3.1rem 0 15rem 0;
     background-position: center center;
     background-size: cover;
@@ -820,9 +819,8 @@ header .row nav ul>i {
 /************************************/
 
 /***********Traveler Section*********/
-#travelers-top {
+#travelers_top {
     padding: 8.9rem 0 0 0;
-
 }
 
 .travel {
@@ -859,17 +857,16 @@ header .row nav ul>i {
     margin-bottom: 1rem;
 }
 
-
 .contact-info ul {
     list-style-type: none;
 }
 
 .contact-info ul li a {
     display: inline-block;
-    padding: 0 1.5rem;
+    padding: 0 1rem;
     color: #000;
     font-size: 1.8rem;
-    /* margin-right: 1rem; */
+
 }
 
 .contact-info ul li {
@@ -880,36 +877,27 @@ header .row nav ul>i {
     display: flex;
     color: #6C6C6C;
 }
-.contact-info ul li a:hover,
-.contact-info ul li a:hover i{
-    color: red;
-}
 
 .contact-info ul li a i {
     color: #6C6C6C;
-    margin-right: 1rem;
+    padding-right: 1rem;
 }
-.contact-info ul li a{
+
+.contact-info ul li a {
     color: #6C6C6C;
+
 }
 
 
-/* /* .contact-info li:hover {
+.contact-info ul li a:hover,
+.contact-info ul li a:hover i {
     color: red;
-} */
+}
 
-
-/* .contact-info ul li a i:hover {
+.contact-info li:hover {
     color: red;
-}  */
 
-/* .contact-info ul li a:hover{
-    color: red;
-} */
-
-/* .contact-info:hover {
-    color: red;
-} */
+}
 
 
 .follow-us .follow-icon {
@@ -945,17 +933,16 @@ header .row nav ul>i {
 .link ul li a {
     font-weight: 500;
     font-size: 1.8rem;
-    line-height: 3rem;
+    line-height: 1.5rem;
     display: flex;
     align-items: center;
     color: #6C6C6C;
-    /* padding: 1.5rem; */
+    padding: 1rem;
 }
 
 .link ul li a:hover {
     color: red;
-    border-bottom: red;
-
+    /* border-bottom: 2px solid #069ABA; */
 }
 
 .follow-us ul {
@@ -979,6 +966,10 @@ header .row nav ul>i {
     color: red;
 }
 
+#travelers-top .containor {
+    margin-top: 8.4rem;
+}
+
 /***********************************/
 /************************************/
 /* @media screen and (max-width:1250px) {
@@ -993,67 +984,93 @@ header .row nav ul>i {
     }
 } */
 /****1441-1650****/
-/* @media screen and (max-width:1650px) {
+@media screen and (max-width:1650px) {
     .why-select-arrow .prev1 {
-        left: -7rem;
+        left: -3rem;
         color: #737373;
     }
 
     .why-select-arrow .next1 {
-        right: -7rem;
+        right: -3rem;
         color: #737373;
     }
 
-} */
-/* 
+    .our-client-arrow .next2 {
+        right: 7rem;
+        color: #737373;
+    }
+
+    .our-client-arrow .prev2 {
+        right: 15rem;
+        color: #737373;
+    }
+
+}
+
 /****1366-1440****/
 @media screen and (max-width:1440px) {
     .containor {
         max-width: 137rem;
     }
 
-    .why-select-arrow .next1,
-    .why-select-arrow .prev1 {
-        width: 6rem;
-        height: 5.6rem;
-        font-size: 2.3rem;
-        line-height: 5.5rem;
-        top: -4.4rem;
+    .hero-data h1 {
+        font-size: 6rem;
+        line-height: 6rem;
     }
 
-    .why-select-arrow .next1 {
-        right: -8rem;
+    .main-title h2 {
+        font-size: 5rem;
+        line-height: 5rem;
+        margin-bottom: 1rem;
+    }
+
+    .main-title p {
+        font-size: 2rem;
+        line-height: 3.1rem;
+        margin-bottom: 7.4rem;
+    }
+
+
+
+    .client-containor {
+        margin: 17rem 0 18rem 0;
+        margin-left: calc((100% - 1300px) / 2);
+    }
+
+
+    .why-select-arrow .prev1 {
+        left: -4rem;
         color: #737373;
     }
 
-    .why-select-arrow .prev1 {
-        left: -8rem;
+    .why-select-arrow .next1 {
+        right: -3rem;
+        color: #737373;
     }
 
-
-    .why-slider .why-text a {
-        margin-top: 3rem;
-        font-size: 1.6rem;
-        line-height: 7rem;
+    .our-client-arrow .next2 {
+        right: 6rem;
+        color: #737373;
     }
 
-    /* .our-client-arrow .next2 {
-    right: 12rem;
-    color: #737373;
+    .our-client-arrow .prev2 {
+        right: 15rem;
+        color: #737373;
+    }
+
+    #hero .hero-data {
+        top: 18%;
+    }
+
+    /* #hero {
+        height: 171vh;
+    } */
 }
 
-.our-client-arrow .prev2{
-    right: 22rem;
-    color: #737373;
-}
-     */
+/* *****************1366*********************************** */
 
-}
-
-
-
-/***1200-1365 (Big ipad)****/
-@media screen and (max-width:1365px) {
+/***1200-1366****/
+@media screen and (max-width:1366px) {
     .containor {
         max-width: 95%;
     }
@@ -1065,7 +1082,7 @@ header .row nav ul>i {
 
     .hero-data h1 {
         font-size: 7rem;
-        line-height: 8rem;
+        line-height: 7rem;
     }
 
     #hero .hero-data {
@@ -1077,23 +1094,23 @@ header .row nav ul>i {
     }
 
     .main-title h2 {
-        font-size: 5rem;
-        line-height: 6rem;
+        font-size: 4rem;
+        line-height: 5rem;
         margin-bottom: 1rem;
     }
 
     .main-title p {
-        font-size: 1.6rem;
-        line-height: 3.3rem;
+        font-size: 1.5rem;
+        line-height: 3.1rem;
         margin-bottom: 7.4rem;
     }
 
     .explore-arrow .prev,
     .explore-arrow .next {
-        width: 6rem;
+        width: 5rem;
         height: 5.6rem;
-        font-size: 2.3rem;
-        line-height: 5.5rem;
+        font-size: 2rem;
+        line-height: 5rem;
     }
 
     #explore {
@@ -1105,8 +1122,8 @@ header .row nav ul>i {
     }
 
     .explore-slider .card-text p {
-        font-size: 1.6rem;
-        line-height: 21px;
+        font-size: 1.3rem;
+        line-height: 20px;
     }
 
     .explore-slider .card-text .explore-cricle {
@@ -1115,7 +1132,7 @@ header .row nav ul>i {
     }
 
     .explore-slider .card-text .explore-cricle span {
-        font-size: 6.2rem;
+        font-size: 6rem;
         line-height: 10rem;
     }
 
@@ -1125,7 +1142,7 @@ header .row nav ul>i {
 
     .why-select-arrow .next1,
     .why-select-arrow .prev1 {
-        width: 6rem;
+        width: 5rem;
         height: 5.6rem;
         font-size: 2.3rem;
         line-height: 5.5rem;
@@ -1137,18 +1154,25 @@ header .row nav ul>i {
         margin-top: 5.6rem;
         margin-right: 2rem;
         margin-bottom: 2rem;
-
     }
 
     .why-slider .why-text h4 {
         font-size: 2rem;
-        line-height: 2.6rem;
+        line-height: 2rem;
         margin-top: 3rem;
     }
 
     .why-slider .why-text p {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
         line-height: 2rem;
+    }
+
+    .why-select-arrow .next1,
+    .why-select-arrow .prev1 {
+
+        font-size: 2.3rem;
+        line-height: 5.5rem;
+        top: 2.6rem;
     }
 
     .why-slider .why-text a {
@@ -1157,48 +1181,109 @@ header .row nav ul>i {
         line-height: 2rem;
     }
 
+    .why-slider .swiper-sd {
+        margin-top: 12.6rem;
+    }
+
     .tour-img img {
         max-width: 90%;
     }
 
     .client-containor .client-say h2 {
-        font-size: 5rem;
+        font-size: 4rem;
         line-height: 6rem;
     }
 
     .client-containor .client-say p {
-        font-size: 1.6rem;
-        line-height: 3.5rem;
+        font-size: 1.4rem;
+        line-height: 3rem;
+    }
+
+    .our-client-arrow .prev2,
+    .our-client-arrow .next2 {
+        z-index: 8;
+        position: absolute;
+        top: -13.4rem;
+        width: 6rem;
+        height: 5.6rem;
+        box-shadow: 0px 8px 50px rgba(0, 0, 0, 0.1);
+        background: #FFFFFF;
+        border: 1px solid #E8E8E8;
+        border-radius: 10px;
+        font-size: 2.5rem;
+        text-align: center;
+        line-height: 5.5rem;
+        cursor: pointer;
     }
 
     .our-client-slider .swiper-slide .client-data h4 {
-        font-size: 2rem;
+        font-size: 1.5rem;
         line-height: 2rem;
         padding-top: 4.2rem;
     }
 
+    .our-client-slider .swiper-slide .client-data p {
+        font-size: 1.3rem;
+    }
+
+    .our-client-arrow .next2 {
+        right: 7rem;
+        color: #737373;
+    }
+
+    .our-client-arrow .prev2 {
+        right: 15rem;
+        color: #737373;
+    }
+
+    .our-client-slider .swiper-slide .client-data>p {
+
+        font-size: 1.5rem;
+        line-height: 2.8rem;
+        color: #858585;
+
+    }
+
+
     #subcribe .main-title h2 {
-        font-size: 5rem;
+        font-size: 4rem;
         line-height: 6rem;
     }
 
     #subcribe .main-title p {
-        font-size: 1.6rem;
+        font-size: 1.4rem;
         line-height: 3rem;
     }
 
     .Subcribe-form .email-form {
-        font-size: 1.8rem;
+        font-size: 1.6rem;
         line-height: 3rem;
     }
 
     .travel h4 {
-        font-size: 2rem;
-        line-height: 6rem;
+        font-size: 1.8rem;
+        line-height: 4rem;
+    }
+
+    .contact-info ul li a {
+        display: inline-block;
+        padding: 0 1rem;
+        color: #858585;
+        font-size: 1.5rem;
+    }
+
+    .travel ul li {
+        font-weight: 500;
+        font-size: 1.5rem;
+        line-height: 2.5rem;
+        display: flex;
+        align-items: center;
+        color: #6C6C6C;
+        margin-bottom: 1rem;
     }
 
     #travelers ul li {
-        font-size: 1.6rem;
+        font-size: 1rem;
         line-height: 3rem;
     }
 
@@ -1207,7 +1292,10 @@ header .row nav ul>i {
     }
 
     .travel .travelers .tra-img img {
-        max-width: 86%;
+        width: 68%;
+    }
+    .follow-icon ul{
+        display: flex;
     }
 
     .copyright p {
@@ -1304,6 +1392,10 @@ header .row nav ul>i {
     #why-select {
         margin-bottom: 15rem;
     }
+
+    /* .why-slider .why-img img{
+        width: 30px;
+    } */
 
     .tour-img img {
         max-width: 70%;
@@ -1531,6 +1623,8 @@ header .row nav ul>i {
         font-size: 1.4rem;
         line-height: 0rem;
     }
+
+
 
     .why-slider .swiper-sd {
         padding: 4.5rem 1rem 3rem 2rem;
@@ -1897,6 +1991,13 @@ header .row nav ul>i {
     .explore-arrow .prev,
     .explore-arrow .next {
         top: -2.4rem;
+    }
+
+    .explore-arrow .prev,
+    .explore-arrow .next {
+        top: -1.4rem;
+        right: 4rem;
+        /* left: 4rem; */
     }
 
     .explore-slider .img-slider {
