--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,7 +211,7 @@ header .row nav ul>i {
 /**********Hero Section************/
 
 #hero {
-    background: url(../imges/pexels-natanael-alves-bezerra-15483817.jpg);
+    background: url(../imges/pexels-χρηστοσ-μιχαλαινασ-15475385.jpg);
     width: 100%;
     height: 100vh;
     background-position: center center;
@@ -442,7 +442,6 @@ header .row nav ul>i {
     position: relative;
     overflow: hidden;
     /* padding-top: 17rem; */
-    margin-bottom: 17rem;
 }
 
 #why-select .main-title {
@@ -559,6 +558,16 @@ header .row nav ul>i {
     height: 54.2rem;
 }
 
+/* #why-select::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.3);
+   background-repeat: no-repeat;
+} */
+/* .swiper-android .swiper-slide, .swiper-wrapper {
+    transform: translate3d(0px,0,0);
+} */
 
 
 /******************************************/
@@ -961,18 +970,7 @@ header .row nav ul>i {
 }
 
 /***********************************/
-/************************************/
-/* @media screen and (max-width:1250px) {
-    header .row nav ul li a {
-        padding: 1.3rem;
-    }
-    header .logo {
-        width: 18rem;
-    }
-    header .row>a i {
-        padding-left: 1.3rem;
-    }
-} */
+
 /****1441-1650****/
 @media screen and (max-width:1650px) {
     .why-select-arrow .prev1 {
@@ -1002,31 +1000,20 @@ header .row nav ul>i {
     .containor {
         max-width: 95%;
     }
+
     header .row {
-        justify-content: space-between;
-        /* background-color: var(--bg-color); */
-        align-items: center;
         padding: 1rem 0;
     }
+
 
     .client-containor {
         margin: 17rem 0 18rem 0;
         margin-left: calc((100% - 90%) / 2);
     }
-    .search-form .explore {
-        background-color: #000;
-        color: var(--secondary-color);
-        border-radius: 38rem;
-        padding: 1.5rem 2rem;
-        font-weight: bold;
-        border: none;
-        font-size: 1.5rem;
-        font-family: 'Poppins';
-    }
-    .main-title h2 {
-        font-size: 4rem;
-        line-height: 6rem;
-        margin-bottom: 1rem;
+
+    .hero-data .search-form {
+        width: 64.6rem;
+        height: 6.7rem;
     }
 
     .hero-data h1 {
@@ -1037,45 +1024,37 @@ header .row nav ul>i {
     .hero-data p {
         font-weight: 500;
         font-size: 1.6rem;
-    }
-
-    .hero-data p {
-        font-weight: 500;
-        font-size: 1.6rem;
-        line-height: 3rem;
+        line-height: 3.4rem;
+        color: #CFCFCF;
+        margin: 3.7rem 0 1.1rem 0;
     }
 
     #hero .hero-data {
-        top: 40%;
-    }
-
-    .hero-data .search-form {
-        width: 63.6rem;
-        height: 6.8rem;
+        top: 24%;
     }
 
     header .row nav ul li a {
         padding: 1.3rem 2rem;
     }
 
-    header .row nav ul li a {
-        color: var(--secondary-color);
-        font-size: 1.6rem;
-        font-weight: 500;
-        padding: 1.3rem 2.3rem;
+    .main-title h2 {
+        font-size: 5rem;
+        line-height: 6rem;
+        margin-bottom: 1rem;
     }
 
     .main-title p {
-        font-size: 1.6rem;
-        line-height: 3.1rem;
+        font-size: 2rem;
+        line-height: 3rem;
         margin-bottom: 7.4rem;
     }
 
-    .explore-arrow .prev, .explore-arrow .next {
+    .explore-arrow .prev,
+    .explore-arrow .next {
         width: 6rem;
         height: 6rem;
-        font-size: 2.8rem;
-        line-height: 6rem;
+        font-size: 2rem;
+        line-height: 5rem;
     }
 
     #explore {
@@ -1086,8 +1065,10 @@ header .row nav ul>i {
         font-size: 2rem;
     }
 
+
+
     .explore-slider .card-text p {
-        font-size: 1.3rem;
+        font-size: 1.5rem;
         line-height: 20px;
     }
 
@@ -1098,7 +1079,7 @@ header .row nav ul>i {
 
     .explore-slider .card-text .explore-cricle span {
         font-size: 6rem;
-        line-height: 10rem;
+        line-height: 9rem;
     }
 
     header .row>a i {
@@ -1107,13 +1088,12 @@ header .row nav ul>i {
 
     .why-select-arrow .next1,
     .why-select-arrow .prev1 {
-        width: 5rem;
-        height: 5.6rem;
+        width: 6rem;
+        height: 6rem;
         font-size: 2.3rem;
         line-height: 5.5rem;
         top: -4.4rem;
     }
-  
 
     .why-slider .swiper-sd {
         padding: 4.5rem 1rem 5rem 2rem;
@@ -1123,34 +1103,22 @@ header .row nav ul>i {
     }
 
     .why-slider .why-text h4 {
-        font-size: 2.2rem;
+        font-size: 2rem;
         line-height: 2rem;
         margin-top: 3rem;
     }
 
     .why-slider .why-text p {
-        font-size: 1.5rem;
-        line-height: 2.2rem;
+        font-size: 1.6rem;
+        line-height: 2.4rem;
     }
 
     .why-select-arrow .next1,
     .why-select-arrow .prev1 {
 
-        font-size: 2.3rem;
+        font-size: 2.2rem;
         line-height: 5.5rem;
         top: 2.6rem;
-    }
-    .why-select-arrow .next1, .why-select-arrow .prev1 {
-        width: 6rem;
-        height: 6rem;
-        font-size: 2.8rem;
-        line-height: 5.5rem;
-        top: -4.4rem;
-    }
-    .main-title h2 {
-        font-size: 6rem;
-        line-height: 7rem;
-        margin-bottom: 1rem;
     }
 
     .why-slider .why-text a {
@@ -1169,13 +1137,16 @@ header .row nav ul>i {
 
     .client-containor .client-say h2 {
         font-size: 5rem;
-        line-height: 7rem;
+        line-height: 8rem;
     }
 
     .client-containor .client-say p {
-        font-size: 1.6rem;
-        line-height: 3rem;
+        font-size: 1.8rem;
+        line-height: 4rem;
     }
+
+
+
 
     .our-client-arrow .prev2,
     .our-client-arrow .next2 {
@@ -1183,21 +1154,19 @@ header .row nav ul>i {
         position: absolute;
         top: -13.4rem;
         width: 6rem;
-        height: 6rem;
+        height: 5.6rem;
         box-shadow: 0px 8px 50px rgba(0, 0, 0, 0.1);
         background: #FFFFFF;
         border: 1px solid #E8E8E8;
         border-radius: 10px;
-        font-size: 2.8rem;
+        font-size: 2.5rem;
         text-align: center;
         line-height: 5.5rem;
         cursor: pointer;
     }
 
     .our-client-slider .swiper-slide .client-data h4 {
-        font-size: 1.8rem;
-        line-height: 2rem;
-        padding-top: 4.2rem;
+        font-size: 2rem;
     }
 
     .our-client-slider .swiper-slide .client-data p {
@@ -1216,7 +1185,7 @@ header .row nav ul>i {
 
     .our-client-slider .swiper-slide .client-data>p {
 
-        font-size: 1.5rem;
+        font-size: 1.6rem;
         line-height: 2.8rem;
         color: #858585;
 
@@ -1225,11 +1194,309 @@ header .row nav ul>i {
 
     #subcribe .main-title h2 {
         font-size: 5rem;
+        line-height: 7rem;
+    }
+
+    #subcribe .main-title p {
+        font-size: 1.7rem;
+        line-height: 3rem;
+    }
+
+    .Subcribe-form .email-form {
+        font-size: 1.6rem;
+        line-height: 3rem;
+    }
+
+    .Subcribe-form {
+        width: 63.6rem;
+        height: 6.2rem;
+    }
+
+    .travel h4 {
+        font-size: 2.3rem;
+        line-height: 6rem;
+    }
+
+    .contact-info ul li a {
+        display: inline-block;
+        padding: 0 1rem;
+        color: #858585;
+        font-size: 1.8rem;
+    }
+
+
+
+    .travel ul li {
+        font-weight: 500;
+        font-size: 1.8rem;
+        line-height: 2.8rem;
+        display: flex;
+        align-items: center;
+        color: #6C6C6C;
+        margin-bottom: 1rem;
+    }
+
+    #travelers ul li {
+        font-size: 1rem;
+        line-height: 3rem;
+    }
+
+    #travelers ul li a {
+        font-size: 1.6rem;
+    }
+
+    .travel .travelers .tra-img img {
+        width: 68%;
+    }
+
+    .follow-icon ul {
+        display: flex;
+    }
+
+    .copyright p {
+        font-size: 1.6rem;
+    }
+
+}
+
+
+
+/***1200-1366****/
+@media screen and (max-width:1366px) {
+    .containor {
+        max-width: 95%;
+    }
+
+    header .row {
+        padding: 1rem 0;
+    }
+
+    .client-containor {
+        margin: 13rem 0 14rem 0;
+        margin-left: calc((100% - 90%) / 2);
+    }
+
+    .hero-data h1 {
+        font-size: 7rem;
+        line-height: 9rem;
+    }
+
+
+
+    #hero .hero-data {
+        top: 32%;
+    }
+
+    header .row nav ul li a {
+        padding: 1.3rem 2rem;
+    }
+
+    .hero-data .search-form {
+        width: 60.6rem;
+        height: 6.7rem;
+    }
+
+    .main-title h2 {
+        font-size: 4rem;
+        line-height: 5rem;
+        margin-bottom: 1rem;
+    }
+
+    .main-title p {
+        font-size: 1.5rem;
+        line-height: 3.1rem;
+        margin-bottom: 7.4rem;
+    }
+
+    .explore-arrow .prev,
+    .explore-arrow .next {
+        width: 5.5rem;
+        height: 5.5rem;
+        font-size: 2rem;
+        line-height: 6rem;
+    }
+
+    #explore {
+        margin: 12.8rem 0 6rem;
+    }
+
+    .explore-slider .card-text h4 {
+        font-size: 2rem;
+    }
+
+    .explore-slider .card-text p {
+        font-size: 1.3rem;
+        line-height: 20px;
+    }
+
+    .explore-slider .card-text .explore-cricle {
+        width: 6rem;
+        height: 6rem;
+    }
+
+    /* .explore-slider .swiper-wrapper {
+        padding: 1rem 0 0 0;
+        margin-top: 2rem;
+        margin-bottom: -5rem;
+    } */
+    .explore-slider .img-slider .card-img img {
+        height: 32rem;
+    }
+
+    .explore-slider .card-text {
+        padding: 1.4rem 0 2.6rem 1.4rem;
+
+    }
+
+    .explore-slider .card-text .explore-cricle span {
+        font-size: 6rem;
+        line-height: 10rem;
+    }
+
+    header .row>a i {
+        padding: 1.3rem 2rem;
+    }
+
+    .why-slider .why-img {
+        width: 7.5rem;
+        height: 7.7rem;
+    }
+
+    .why-select-arrow .next1,
+    .why-select-arrow .prev1 {
+        width: 5.5rem;
+        height: 5.5rem;
+        font-size: 2.3rem;
+        line-height: 6rem;
+        top: -4.4rem;
+    }
+
+    .why-slider .swiper-sd {
+        padding: 2.5rem 1rem 5rem 2rem;
+        margin-top: 5.6rem;
+        margin-right: 2rem;
+        margin-bottom: 2rem;
+    }
+    .why-slider .swiper-wrapper {
+        padding-bottom: 1rem;
+    }
+
+
+
+    .why-slider .why-text p {
+        font-size: 1.4rem;
+        line-height: 2.5rem;
+    }
+
+    .why-slider .why-text h4 {
+        font-size: 1.6rem;
+    }
+
+    .why-select-arrow .next1,
+    .why-select-arrow .prev1 {
+
+        font-size: 2.3rem;
+        line-height: 5.5rem;
+        top: 2.6rem;
+    }
+
+    .why-slider .why-text a {
+        margin-top: 3rem;
+        font-size: 1.6rem;
+        line-height: 2rem;
+    }
+
+    .why-slider .swiper-sd {
+        margin-top: 12.6rem;
+    }
+
+    .tour-img img {
+        max-width: 90%;
+    }
+
+    .client-containor .client-say h2 {
+        font-size: 4rem;
+        line-height: 6rem;
+    }
+
+    .client-containor .client-say p {
+        font-size: 1.4rem;
+        line-height: 3rem;
+    }
+
+    .our-client-arrow .prev2,
+    .our-client-arrow .next2 {
+        z-index: 8;
+        position: absolute;
+        top: -13.4rem;
+        width: 6rem;
+        height: 5.6rem;
+        box-shadow: 0px 8px 50px rgba(0, 0, 0, 0.1);
+        background: #FFFFFF;
+        border: 1px solid #E8E8E8;
+        border-radius: 10px;
+        font-size: 2.5rem;
+        text-align: center;
+        line-height: 5.5rem;
+        cursor: pointer;
+    }
+
+    #our-tour {
+        margin-top: 12.6rem;
+    }
+
+    .our-client-slider .swiper-slide .client-data h4 {
+        font-size: 1.8rem;
+        line-height: 2rem;
+        padding-top: 4.2rem;
+    }
+
+    .our-client-slider .swiper-slide .client-data p {
+        font-size: 1.3rem;
+    }
+
+    .our-client-arrow .next2 {
+        right: 7rem;
+        color: #737373;
+    }
+
+    .our-client-arrow .prev2 {
+        right: 19rem;
+        color: #737373;
+    }
+
+    .our-client-slider .swiper-slide .client-data>p {
+
+        font-size: 1.5rem;
+        line-height: 2.8rem;
+        color: #858585;
+
+    }
+
+    .our-client-slider .swiper-slide .client-img img {
+        width: 11rem;
+        height: 11rem;
+    }
+
+    #our-client .our-client-slider .swiper-clt {
+        height: 38.2rem;
+    }
+
+    .Subcribe-form .Subscribe {
+
+        padding: 1.3rem 2rem;
+        font-weight: 500;
+        font-size: 17px;
+    }
+
+
+    #subcribe .main-title h2 {
+        font-size: 4rem;
         line-height: 6rem;
     }
 
     #subcribe .main-title p {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         line-height: 3rem;
     }
 
@@ -1238,12 +1505,12 @@ header .row nav ul>i {
         line-height: 3rem;
     }
     .Subcribe-form {
-        width: 65.6rem;
+        width: 53.6rem;
         height: 6.2rem;
     }
 
     .travel h4 {
-        font-size: 2.2rem;
+        font-size: 1.9rem;
         line-height: 5rem;
     }
 
@@ -1252,6 +1519,12 @@ header .row nav ul>i {
         padding: 0 1rem;
         color: #858585;
         font-size: 1.5rem;
+    }
+
+    .link ul li a {
+        font-weight: 500;
+        font-size: 1.6rem;
+        line-height: 1.4rem;
     }
 
     .travel ul li {
@@ -1287,11 +1560,6 @@ header .row nav ul>i {
 
 }
 
-
-
-/***1200-1366****/
-@media screen and (max-width:1365px) {}
-
 /* 992-1199 */
 @media screen and (max-width:1199px) {
     .logo img {
@@ -1319,14 +1587,15 @@ header .row nav ul>i {
         margin: 3rem 0 1.1rem 0;
     }
 
-    .hero-data .search-form {
-        width: 68.6rem;
-        height: 6.8rem;
-    }
 
     .search-form .explore {
         padding: 1.5rem 2rem;
-        font-size: 1.6rem;
+        font-size: 1.4rem;
+    }
+
+    .hero-data .search-form {
+        width: 60.6rem;
+        height: 5.8rem;
     }
 
     .search-form select {
@@ -1358,20 +1627,35 @@ header .row nav ul>i {
         line-height: 4.5rem;
         top: -1.4rem;
     }
+    .why-slider .swiper-sd {
+        padding: 3.5rem 1rem 5rem 2rem;
+        margin-top: 5.6rem;
+        margin-right: 7rem;
+        margin-bottom: 1rem;
+    }
+    #why-select::before {
+        /* z-index: 1; */
+        content: '';
+        position: absolute;
+        inset: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        height: 47.2rem;
+    }
 
     .our-client-arrow .prev2,
     .our-client-arrow .next2 {
-        width: 5rem;
-        height: 4.6rem;
+        width: 4rem;
+        height: 4rem;
         font-size: 1.8rem;
         line-height: 4.5rem;
         top: -5.4rem;
     }
 
     .our-client-arrow .prev2 {
-        right: 10rem;
+        right: 14rem;
         color: #737373;
     }
+    
 
     #why-select {
         background-size: 100% 47.2rem;
@@ -1430,7 +1714,12 @@ header .row nav ul>i {
         width: 26.9rem;
         height: 37.2rem;
         padding: 5rem 3.4rem 0.1rem 2.3rem;
-        margin: 0px 1rem 0 2rem;
+        margin: 0px 1rem 0 10rem;
+    }
+
+    .explore-slider .card-text .explore-cricle span {
+        font-size: 5rem;
+        line-height: 9rem;
     }
 }
 
@@ -1521,7 +1810,6 @@ header .row nav ul>i {
 
     header .row .search {
         order: 1;
-        margin-left: auto;
     }
 
     header .row .search i {
